@@ -6,7 +6,10 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Being coherent in the logic of _getMailFrom from Notifications and getMailFrom
+  from SubscriptionContainer. Beside using the creator of the document in
+  _getMailFrom is pointless since all the workflow information is contained in
+  the email message body.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
